<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleHint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAuthor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authorHint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvGenre"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/editTextGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genreHint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSynopsis"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/editTextSynopsis"
        android:lines="5"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/synopsisHint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRating"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <RadioGroup
        android:id="@+id/rgRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"/>
        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"/>
        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"/>
        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"/>
        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvStatus"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgStatus">

        <RadioButton
            android:id="@+id/rbs1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbs1"/>

        <RadioButton
            android:id="@+id/rbs2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbs2"/>


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textUpdate"
            android:backgroundTint="@color/purple_200"
            android:layout_margin="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDel"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textCancel"
        android:backgroundTint="@color/purple_700"/>

</LinearLayout>