<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName"
        android:text="@string/nameTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/purple_800"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAuthor"
        android:text="@string/tvAuthor"
        android:textColor="@color/teal_700"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGenre"
        android:text="@string/tvGenre"
        android:textColor="@color/purple_500"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSynopsis"
        android:paddingRight="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:numStars="5"
            android:rating="2"
            android:stepSize="1"
            android:id="@+id/rbStars"/>

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvStatus"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</LinearLayout>