<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtext"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/sortbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sortGenre"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/sort2btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sortStars"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/purple_500"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextGenre2"
        android:hint="@string/genreHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <ListView
        android:id="@+id/listViewNovels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>